Add some more unicode icon strings

--- a/Kompose/app/src/main/res/layout/in_queue_song_view.xml
+++ b/Kompose/app/src/main/res/layout/in_queue_song_view.xml
@@ -87,7 +87,7 @@
                     android:clickable="true"
                     android:focusable="true"
                     android:onClick="@{viewHolder.onDownVoteClick}"
-                    android:text="@string/downvote_icon_cross"
+                    android:text="@string/icons_ai_halt"
                     android:fontFamily="@font/androidicons" />
 
             </RelativeLayout>
