Change to MIN:SEC song length format

--- a/Kompose/app/src/main/res/layout/activity_playlist.xml
+++ b/Kompose/app/src/main/res/layout/activity_playlist.xml
@@ -67,7 +67,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/currently_playing_title"
-                        android:text="@{String.valueOf(viewModel.sessionModel.currentlyPlaying.secondsLength)}"
+                        android:text="@{viewModel.sessionModel.currentlyPlaying.songLengthMinSec}"
                         tools:text="300" />
 
                     <LinearLayout
