--- a/Kompose/app/src/main/res/layout/activity_main.xml
+++ b/Kompose/app/src/main/res/layout/activity_main.xml
@@ -16,25 +16,31 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-
-
-        <android.support.design.widget.TabLayout
-            android:id="@+id/tabLayout"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
-            <android.support.design.widget.TabItem
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="Join Session" />
-
-
-            <android.support.design.widget.TabItem
+            <android.support.design.widget.TabLayout
+                app:tabMinWidth="90dp"
+                android:id="@+id/tabLayout"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Center" />
+                android:layout_height="wrap_content">
 
-        </android.support.design.widget.TabLayout>
+                <android.support.design.widget.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="@string/join"
+                    android:minWidth="60dp"/>
+
+
+                <android.support.design.widget.TabItem
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/create" />
+
+            </android.support.design.widget.TabLayout>
+            
+        </RelativeLayout>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/viewPager"
