--- a/Kompose/app/src/main/res/layout/session_join_view.xml
+++ b/Kompose/app/src/main/res/layout/session_join_view.xml
@@ -14,37 +14,24 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        style="@style/TileLayout"
+        android:layout_marginBottom="3pt">
 
-        android:orientation="horizontal">
-
-        <Button
-            android:layout_width="wrap_content"
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/russoone_regular"
-            android:onClick="@{viewHolder.onJoinClick}"
-            android:text="@string/join" />
+            android:text="@{viewHolder.item.name}"
+            tools:text="margeths session"
+            style="@style/PrimaryTextView"/>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:padding="3pt">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{viewHolder.item.name}"
-                android:textColor="@color/textColor"
-                tools:text="margeths session" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@{viewHolder.item.name}"
-                android:textColor="@color/textColor"
-                tools:text="margareth" />
-
-        </LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@{viewHolder.item.name}"
+            tools:text="margareth"
+            style="@style/SecondaryTextView" />
 
     </LinearLayout>
+
 </layout>
