--- a/Kompose/app/src/main/res/layout/in_queue_song_view.xml
+++ b/Kompose/app/src/main/res/layout/in_queue_song_view.xml
@@ -18,6 +18,7 @@
 
 
     <LinearLayout
+        android:layout_marginBottom="3dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#efefef"
@@ -29,13 +30,6 @@
             android:orientation="vertical"
             android:visibility="@{viewHolder.item.songStatus == SongStatus.RESOLVING ? View.VISIBLE : View.GONE}"
             tools:visibility="visible">
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:padding="6pt"
-                android:text="@string/song_is_resolved" />
-
         </LinearLayout>
 
 
@@ -44,7 +38,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:visibility="@{viewHolder.item.songStatus != SongStatus.RESOLVING ? View.VISIBLE : View.GONE}"
-            tools:visibility="gone">
+            tools:visibility="visible">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -88,7 +82,9 @@
                     android:focusable="true"
                     android:onClick="@{viewHolder.onDownVoteClick}"
                     android:text="@string/icons_ai_halt"
-                    android:fontFamily="@font/androidicons" />
+                    android:fontFamily="@font/androidicons"
+                    tools:visibility="visible"
+                    />
 
             </RelativeLayout>
 
