--- a/Kompose/app/src/main/res/layout/activity_history_details.xml
+++ b/Kompose/app/src/main/res/layout/activity_history_details.xml
@@ -13,38 +13,100 @@
     </data>
 
     <LinearLayout
+        style="@style/RootLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
-        <RelativeLayout
-            android:id="@+id/currently_playing"
+        <LinearLayout
+            style="@style/TileLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="3pt"
-            android:background="#efefef"
-            android:padding="3pt"
-            android:visibility="@{viewModel.sessionModel.currentlyPlaying == null ? View.GONE : View.VISIBLE}">
+            android:layout_marginTop="3pt"
+            android:baselineAligned="false"
+            android:weightSum="2">
 
-            <TextView
-                android:id="@+id/currently_playing_title"
-                android:layout_width="match_parent"
+
+            <LinearLayout
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@{viewModel.sessionModel.name}"
-                android:textColor="#000"
-                tools:text="Session name" />
+                android:layout_weight="1"
+                android:orientation="vertical">
 
-        </RelativeLayout>
+                <TextView
+                    style="@style/LabelTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/session_name" />
 
+                <TextView
+                    style="@style/SecondaryTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{viewModel.sessionModel.name}"
+                    tools:text="Session name" />
+
+
+                <TextView
+                    style="@style/LabelTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5pt"
+                    android:text="@string/creation_date_time" />
+
+                <TextView
+                    style="@style/SecondaryTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{viewModel.sessionModel.creationDateTime.toString()}"
+                    tools:text="20.08.2015" />
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/LabelTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/host" />
+
+                <TextView
+                    style="@style/SecondaryTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{viewModel.sessionModel.hostName}"
+                    tools:text="Host name" />
+
+                <TextView
+                    style="@style/LabelTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5pt"
+                    android:text="@string/songs_contained" />
+
+                <TextView
+                    style="@style/SecondaryTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{String.valueOf(viewModel.sessionModel.allSongList.size())}"
+                    tools:text="3" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="3pt"
-            android:layout_marginRight="3pt"
-            android:layout_marginTop="10pt"
+            android:layout_marginTop="5pt"
             tools:listitem="@layout/history_song_view">
 
         </android.support.v7.widget.RecyclerView>
