--- a/Kompose/app/src/main/res/layout/fragment_manual.xml
+++ b/Kompose/app/src/main/res/layout/fragment_manual.xml
@@ -11,7 +11,7 @@
     </data>
 
     <LinearLayout
-        style="@style/RootLayout"
+        style="@style/TextContentLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
