Add Host info dialog

--- a/Kompose/app/src/main/res/menu/menu_playlist_activity.xml
+++ b/Kompose/app/src/main/res/menu/menu_playlist_activity.xml
@@ -6,4 +6,6 @@
         android:title="@string/show_history" />
     <item android:id="@+id/leave_session"
         android:title="@string/leave_session" />
+    <item android:id="@+id/host_info"
+        android:title="@string/host_info" />
 </menu>
