--- a/Kompose/app/src/main/res/layout/activity_main.xml
+++ b/Kompose/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,10 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:elevation="0.5pt"
+            android:clipToPadding="false"
+            android:background="@color/greyBackground">
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tabLayout"
