--- a/Kompose/app/src/main/res/layout/fragment_manual.xml
+++ b/Kompose/app/src/main/res/layout/fragment_manual.xml
@@ -16,6 +16,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            style="@style/SecondaryTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/connect_manually" />
+
+        <LinearLayout style="@style/DividerLayout" />
 
         <TextView
             style="@style/LabelTextView"
@@ -47,7 +54,8 @@
 
 
         <Button
-            android:layout_width="match_parent"
+            style="@style/PrimaryButton"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:onClick="@{viewModel.joinManualClicked}"
             android:text="@string/join_manually" />
