--- a/Kompose/app/src/main/res/values/styles.xml
+++ b/Kompose/app/src/main/res/values/styles.xml
@@ -55,7 +55,7 @@
 
     <style name="PrimaryTextView" parent="BaseTextView">
         <item name="android:fontFamily">@font/opensans_regular</item>
-        <item name="android:textSize">10pt</item>
+        <item name="android:textSize">11.2pt</item>
         <item name="android:textColor">#000</item>
     </style>
 
@@ -75,8 +75,25 @@
     </style>
 
     <style name="LabelTextView" parent="BaseTextView">
-        <item name="android:layout_marginBottom">-2pt</item>
+        <item name="android:layout_marginBottom">-3pt</item>
         <item name="android:textColor">#000</item>
+        <item name="android:textSize">4.375pt</item>
+    </style>
+
+    <style name="PrimaryButton">
+        <item name="android:fontFamily">@font/russo_one</item>
+        <item name="android:textSize">8pt</item>
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:padding">6pt</item>
+        <item name="android:textColor">#fff</item>
+    </style>
+
+    <style name="DividerLayout">
+        <item name="android:layout_width">20pt</item>
+        <item name="android:layout_height">2pt</item>
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:layout_marginTop">4pt</item>
+        <item name="android:layout_marginBottom">4pt</item>
     </style>
 
 </resources>
