--- a/Kompose/app/src/main/res/layout/fragment_join_session.xml
+++ b/Kompose/app/src/main/res/layout/fragment_join_session.xml
@@ -29,7 +29,7 @@
                 android:text="@string/join_existing_party" />
 
 
-            <LinearLayout style="@style/DividerLayout" />
+            <LinearLayout style="@style/HorizontalDividerLayout" />
 
             <TextView
                 style="@style/LabelTextView"
