--- a/Kompose/app/src/main/res/values/styles.xml
+++ b/Kompose/app/src/main/res/values/styles.xml
@@ -35,7 +35,7 @@
     </style>
 
     <style name="TileLayout">
-        <item name="android:padding">3pt</item>
+        <item name="android:padding">5pt</item>
         <item name="android:background">@color/greyBackground</item>
         <item name="android:layout_marginLeft">3pt</item>
         <item name="android:layout_marginRight">3pt</item>
@@ -55,7 +55,7 @@
 
     <style name="PrimaryTextView" parent="BaseTextView">
         <item name="android:fontFamily">@font/opensans_regular</item>
-        <item name="android:textSize">11.2pt</item>
+        <item name="android:textSize">8.4pt</item>
         <item name="android:textColor">#000</item>
     </style>
 
@@ -63,7 +63,7 @@
 
     </style>
 
-    <style name="IconTextView" parent="BaseTextView">
+    <style name="IconButtonTextView" parent="BaseTextView">
         <item name="android:fontFamily">@font/androidicons</item>
         <item name="android:textSize">5.7pt</item>
         <item name="android:padding">7.4pt</item>
@@ -71,11 +71,11 @@
 
 
     <style name="DefaultEditText">
-        <item name="android:layout_marginStart">-2pt</item>
+        <item name="android:layout_marginStart">-3pt</item>
     </style>
 
     <style name="LabelTextView" parent="BaseTextView">
-        <item name="android:layout_marginBottom">-3pt</item>
+        <item name="android:layout_marginBottom">-2pt</item>
         <item name="android:textColor">#000</item>
         <item name="android:textSize">4.375pt</item>
     </style>
@@ -88,12 +88,19 @@
         <item name="android:textColor">#fff</item>
     </style>
 
-    <style name="DividerLayout">
+    <style name="HorizontalDividerLayout">
         <item name="android:layout_width">20pt</item>
         <item name="android:layout_height">2pt</item>
         <item name="android:background">@color/colorAccent</item>
         <item name="android:layout_marginTop">4pt</item>
         <item name="android:layout_marginBottom">4pt</item>
     </style>
+
+    <style name="VerticalDividerLayout">
+        <item name="android:layout_width">1pt</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@color/colorAccent</item>
+        <item name="android:layout_marginStart">6pt</item>
+        <item name="android:layout_marginEnd">6pt</item></style>
 
 </resources>
